2008-04-06  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (ui_info):
	Added fullscreen switch in popup window.
	Inspired by the idea of DreamerC <dreamerwolf.tw@gmail.com>.

2008-04-05  Jason Xia  <jasonxh@gmail.com>

	* src/core/termdata.cpp (read_line): Fix the bug of missing the last
	character of each line when copying multi-line contents.

2008-03-30  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Applied linker optimizations: prevent gaps between
	symbols due to alignment constraints, presumably increasing
	efficiency layout.

2008-03-28  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Reduce relocations in the libraries through extra
	linker optimizations.  This needs GNU ld >= 2.18 .

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/appconfig.h,
	src/generalprefpage.h,
	src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault),
	src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage): Properly
	handled conditional USE_DOCKLET.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage): Fixlet
	to conditional USE_MOUSE.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/emoticondlg.cpp: Fix gcc-4.3 build.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/pcmanx_gtk2.cpp (main): Set env G_DEBUG=fatal_warnings to figure
	out GObject runtime warnings while --enable-debug.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp
	(CMainFrame::OnShowHide) (CMainFrame::OnTray_Popup): clear way to wrap
	conditional USE_DOCKLET implementations.
	(char *ui_info): Refine menuitem/toolitem actions reflecting
	conditional USE_DOCKLET and USE_WGET.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* README: Reflected recent modifications.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termview.h (CopyToClipboard): Declared as virtual function.
	Prepared for advanced text processing.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termdata.cpp,